k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-alibabos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-alibabos
  template:
    metadata:
      labels:
        app: frontend-alibabos
    spec:
      containers:
      - name: frontend-alibabos
        image: zolangivre/frontend-alibabos:latest
        ports:
        - containerPort: 3000
