k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-alibabos-service
spec:
  selector:
    app: frontend-alibabos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
