k8s/alibabos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-alibabos
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: alibabos.zolangivre.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-alibabos-service
                port:
                  number: 80
  tls:
    - hosts:
        - alibabos.zolangivre.com
      secretName: frontend-tls
